[package]
name = "circus"
version = "0.1.0"
authors = ["krcz"]

[dependencies]
regex = "1"
hex-slice = "0.1.4"
select = "0.4.2"
hyper = "0.12.0"
tokio-core = "0.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethabi = "5.1.0"
rustc-hex = "1.0"
error-chain = { version = "0.12.0", default-features = false }
futures = "0.1"

[features]
backtrace = ["error-chain/backtrace"]